# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml
.github/workflows/: test-coverage.yml
task_manager/: settings.py
task_manager/fixtures/: labels_db.json  statuses_db.json  tasks_db.json  users_db.json
